src/styles/Collapse.module.css
@import 'index.css';

.container {
    max-width: 1023px;
    margin: 35px auto;
    font-size: 24px;
}

.containerLogement {
    display: flex;
    flex-direction: column;
    max-width: 600px;
    width: 60%;
    font-size: 18px;
}

.titleContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.title {
    background-color: var(--primary);
    padding: 10px;
    color: var(--secondary);
    font-weight: 500;
    border-radius: 5px;
    width: 100%;
    height: 47px;
    display: flex;
    align-items: center;
}

.img {
    height: 10px;
    margin-left: -50px;
    margin-right: 20px;
}

.description {
    background-color: var(--container);
    padding: 25px 20px;
    line-height: 26px;
    border-radius: 5px;
    color: var(--primary);
    min-height: 100px;
    height: 100%;
}

.descriptionAbout{
    line-height: 34px;
} 


@media screen and (max-width: 768px) {
    .containerLogement {
        min-width: 100%;
    }   
}

@media screen and (max-width: 480px) {
    .description,
    .descriptionAbout {
        font-size: 14px;
        line-height: 20px;
        padding: 11px 8px;
    }

    .title {
        font-size : 15px;
        height: 35px;
    }
}

